# imdb-resolver

./: .gitignore  .mise.toml  Chart.yaml  Dockerfile  main.py  pyproject.toml  renovate.json  requirements.txt  test_main.py  values.yaml
.github/workflows/: build.yml  build_publish.yml  main.yml
.kubernetes/: manifest.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  secrets.yaml
src/bot/: main.py
src/imdb_resolver/: main.py
src/tests/: test_main.py
templates/: depoyment.yaml
