[project]
requires-python = "==3.11.*"
name = "imdb-resolver"
version = "1.0.0"
description = ""
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "cinemagoer ==2023.5.1",
    "fastapi ==0.115.8",
    "pydantic ==2.10.6",
    "requests ==2.32.3",
    "sentry-sdk [fastapi] ==2.20.*",
    "uvicorn ==0.34.0",
]

[dependency-groups]
dev = [
    "httpx ==0.28.*",
    "mypy ==1.14.*",
    "pytest >=8, <9",
    "ruff ==0.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "imdb.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
